02-separate-services/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: content-generator
  namespace: content-generator
spec:
  hosts:
  - content-generator.content-generator.svc.cluster.local
  gateways:
  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        prefix: /name
    route:
    - weight: 90
      destination:
        host: names.content-generator.svc.cluster.local
        subset: v1
    - weight: 10 
      destination:
        host: names.content-generator.svc.cluster.local
        subset: v2
  - match:
      - uri:
          prefix: /number
    route:
    - weight: 90
      destination:
        host: numbers.content-generator.svc.cluster.local
        subset: v1
    - weight: 10
      destination:
        host: numbers.content-generator.svc.cluster.local
        subset: v2
